--- a/AILab_6/AILab_6.vcxproj.filters
+++ b/AILab_6/AILab_6.vcxproj.filters
@@ -34,10 +34,7 @@
     <ClInclude Include="include\Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Tile.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\Tile.h">
+    <ClInclude Include="include\FlowFieldGraph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -48,7 +45,7 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Tile.cpp">
+    <ClCompile Include="src\FlowFieldGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
